# papercraft-elephant-box

./: .pre-commit-config.yaml  elephantbox.sublime-project  prototyping.sh  pyproject.toml
src/elephantbox/: Units.py  cli.py
src/elephantbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/elephantbox/boxes/: Abstract.py  Dash.py  Elephant.py  Watch.py
src/elephantbox/boxes/assembly/: Finger.py
src/elephantbox/boxes/component/: Abstract.py  CircleLock.py  Dash.py  Defaults.py
src/elephantbox/boxes/recipe/: Elephant.py
src/elephantbox/boxes/tuck/: Elephant.py  Watch.py
src/elephantbox/math/: Geometry.py
src/elephantbox/support/: Argumentable.py  Laserable.py  Validatable.py  cli.py
