[project]
name = "elephantbox"
version = "0.0.1"
dependencies = [
    "drawsvg[all]~=2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
elephantbox = "elephantbox.cli:ElephantBoxMain"



[tool.black]
line-length = 80
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.pyright]
pythonVersion = '3.9'
venvPath = '.'
venv = 'venv'
